--- a/src/MovieCard/MovieCard.css
+++ b/src/MovieCard/MovieCard.css
@@ -1,5 +1,9 @@
 .movie-card {
     height: 100vh;
-    display: grid;
-    background-color: darkolivegreen;
+      display: grid;
+      grid-template-columns: 1fr 4fr;
+      grid-template-rows: 1fr 3fr;
+      grid-column-gap: 1px;
+      grid-row-gap: 1px;
+      background-color: darkolivegreen;
 }
