Fix page layout

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-.App {
+main {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   text-align: center;
 }
