--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,9 +1,10 @@
 footer {
-  background: lightgrey;
-  padding: 2em 0;
+  height: 10%;
+  color: #9BE0F8;
+  background: #251B33;
 }
 
-p {
+footer > p {
   font-style: italic;
-  font-weight: lighter;
+  padding: 2em;
 }
