--- a/src/MovieList/MovieList.css
+++ b/src/MovieList/MovieList.css
@@ -2,10 +2,11 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
-  grid-gap: 20px;
+  grid-gap: 2em;
   overflow-y: scroll;
 }
 
 .movie-link {
   text-decoration: none;
+  color: inherit;
 }
