--- a/src/MovieCard/MovieCard.css
+++ b/src/MovieCard/MovieCard.css
@@ -1,23 +1,26 @@
 .movie-card {
-   border: black solid 2px;
-   background-color: gainsboro;
-   display: flex;
-   flex-direction: column;
-   flex-wrap: wrap;
-   align-content: center;
-   justify-content: space-evenly;
-   align-items: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .movie-image {
-height: 300px;
-width: 300px;
+  height: 25em;
+  width: auto;
 }
 
 .movie-title {
- color:hotpink
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 .movie-ratings {
-  background-color: khaki;
+  font-size: .8em;
+}
+
+.movie-release {
+  
 }
