--- a/src/MovieList/MovieList.css
+++ b/src/MovieList/MovieList.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   -ms-overflow-style: none;
-  scrollbar-width: none; 
+  scrollbar-width: none;
 }
 
 .movie-list::-webkit-scrollbar {
@@ -19,7 +19,7 @@
   padding: 2em;
   height: 80%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   justify-items: center;
   grid-gap: 1em;
 }
@@ -27,4 +27,28 @@
 .movie-link {
   text-decoration: none;
   color: inherit;
+}
+
+@media (min-width: 1816px) {
+  .list-grid {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+@media (max-width: 1440px) {
+  .list-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .list-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 425px) {
+  .list-grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
