--- a/src/MovieDetails/MovieDetails.css
+++ b/src/MovieDetails/MovieDetails.css
@@ -10,7 +10,7 @@
 
 .description-container {
    /* height: 150px; */
-    width: 1200px;
+    /* width: 1200px; */
     background-color: #02091B;
     display: flex;
     flex-direction: column;
