Change t=font style

--- a/src/MovieDetails/MovieDetails.css
+++ b/src/MovieDetails/MovieDetails.css
@@ -23,7 +23,7 @@
   font-size: larger;
   font-weight: bold;
   height: 10em;
-  background-color: #02091B;
+  background-color: #02091bcc;
   display: flex;
   flex-direction: column;
   justify-content: center;
