--- a/src/MovieList/MovieList.css
+++ b/src/MovieList/MovieList.css
@@ -11,9 +11,11 @@
 }
 
 .list-header {
-  font-size: 3em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2em;
   font-weight: 500;
   margin: 10px 0 0 0;
+  color: #9BE0F8;
 }
 
 .list-grid {
