--- a/src/MovieCard/MovieCard.css
+++ b/src/MovieCard/MovieCard.css
@@ -1,4 +1,5 @@
 .movie-card {
+  transition: all .2s ease-in-out;
   font-family: Arial Helvetica sans-serif;
   display: flex;
   flex-direction: column;
@@ -7,6 +8,7 @@
   justify-content: space-between;
   align-items: center;
 }
+.movie-card:hover { transform: scale(1.1); }
 
 .movie-image {
   margin: 20px 0 20px 0;
