--- a/src/MovieCard/MovieCard.css
+++ b/src/MovieCard/MovieCard.css
@@ -8,17 +8,26 @@
   justify-content: space-between;
   align-items: center;
 }
-.movie-card:hover { transform: scale(1.1); }
+
+.movie-card:hover { 
+  transform: scale(1.1); 
+}
 
 .movie-image {
   margin: 20px 0 20px 0;
-  border-radius: .3em;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
   height: 25em;
-  width: auto;
+  width: 20em
 }
 
 .movie-info {
   font-size: .9em;
+  background: #3b3f406e;
+  width: -webkit-fill-available;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  
 }
 
 .movie-title {
